<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.fragments.TripPlannerFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/emel"
            android:tint="?attr/emelColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_gira"
            android:tint="?attr/emelColor" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/descr_tp"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:textColorHint="?attr/placeholderTextColor"
            app:boxBackgroundColor="?attr/backgroundColor"
            app:boxStrokeColor="?attr/formColor"
            app:counterTextColor="?attr/placeholderTextColor"
            app:errorEnabled="true"
            app:helperTextTextColor="?attr/placeholderTextColor"
            app:hintTextColor="?attr/formColor"
            app:placeholderText="Ex: Av. do Brasil"
            app:placeholderTextColor="?attr/placeholderTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="?attr/textColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/goToSearchResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/fabColor"
            android:text="@string/search" />

    </LinearLayout>
</ScrollView>